added arbor-vitae geojsons

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -8,6 +8,7 @@
     {%- seo -%}
     <link rel="icon" type="image/x-icon" href="{{ '/favicon.ico' | relative_url }}">
     {%- feed_meta -%} 
+    <style>.post-content p { font-size: 1.2em; }</style>
     <style>body{opacity:0;}</style>
     <script id="loader" src="https://www.juncture-digital.io/js/juncture.js" data-ghbase="{{site.github.owner_name}}/{{site.github.repository_name}}/{{site.github.source.branch}}/{{page.path}}"></script>
   </head>
