--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -44,7 +44,7 @@ layout: base
       {%- for post in site.articles -%}
       <li>
         {%- if post.thumbnail -%}
-          <div class="image-container" style="width: 250px; height: 160px; flex-shrink: 0; overflow: hidden;">
+          <div class="image-container" data-path="{{post.path}}" style="width: 250px; height: 160px; flex-shrink: 0; overflow: hidden;">
             <img data-src="{{ post.thumbnail }}" alt="{{ post.title }}" class="post-image shadow" style="display: block; width: 100%; height: 100%; object-fit: cover;"/>
           </div>
         {%- endif -%}
