Updated post image in layouts

--- a/_layouts/tagpage.html
+++ b/_layouts/tagpage.html
@@ -28,8 +28,8 @@ layout: base
     {% if post.tags contains target_tag %}
     <li>
       {%- if post.thumbnail -%}
-        <div class="image-container" style="width: 250px; height: 160px; flex-shrink: 0; overflow: hidden;">
-          <img src="{{ post.thumbnail }}" alt="{{ post.title }}" class="post-image shadow" style="display: block; width: 100%; height: 100%; object-fit: cover;"/>
+        <div class="image-container" data-path="{{post.path}}" style="width: 250px; height: 160px; flex-shrink: 0; overflow: hidden;">
+          <img data-src="{{ post.thumbnail }}" alt="{{ post.title }}" class="post-image shadow" style="display: block; width: 100%; height: 100%; object-fit: cover;"/>
         </div>
       {%- endif -%}
       <div>
