--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -7,8 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {%- seo -%}
     <link rel="icon" type="image/x-icon" href="{{ '/favicon.ico' | relative_url }}">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@latest/css/all.min.css">
     {%- feed_meta -%} 
-    <style>.post-content p { font-size: 1.2em; }</style>
+    <style>
+      .wrapper a.site-title {
+        font-size: clamp(1.5rem, 2vw + 1rem, 2.5rem);
+      }
+      .post-content p { font-size: 1.2em; }
+    </style>
     <style>body{opacity:0;}</style>
     <script id="loader" src="https://www.juncture-digital.io/js/juncture.js" data-ghbase="{{site.github.owner_name}}/{{site.github.repository_name}}/{{site.github.source.branch}}/{{page.path}}"></script>
   </head>
