--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -56,6 +56,7 @@
           {% endfor %}
         {% endcapture %}
 
+
         {% assign nav_items = nav_items_string | split: '::' %}
 
         <nav class="site-nav">
@@ -86,6 +87,7 @@
                 <a class="nav-item" href="{{ url | relative_url }}">{{ title | escape }}</a>
               {% endif %}
             {% endfor %}
+            <a class="nav-item" href="https://ezsitepdf-drnxe7pzjq-uc.a.run.app/pdf?url={{ page.url | absolute_url | uri_escape }}"><i class="fa-regular fa-file-pdf"></i></span></a>
           </div>
 
         </nav>
