--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -87,7 +87,7 @@
                 <a class="nav-item" href="{{ url | relative_url }}">{{ title | escape }}</a>
               {% endif %}
             {% endfor %}
-            <a class="nav-item" href="https://ezsitepdf-drnxe7pzjq-uc.a.run.app/pdf?url={{ page.url | absolute_url | uri_escape }}?static"><i class="fa-regular fa-file-pdf"></i></span></a>
+            <a class="nav-item" href="https://ezsitepdf-drnxe7pzjq-uc.a.run.app/pdf?url={{ page.url | absolute_url | uri_escape }}%3Fstatic"><i class="fa-regular fa-file-pdf"></i></span></a>
           </div>
 
         </nav>
